@@ -1,18 +1,21 @@
 /****************************************************************************/
 // Eclipse SUMO, Simulation of Urban MObility; see https://eclipse.org/sumo
-// Copyright (C) 2017-2019 German Aerospace Center (DLR) and others.
-// This program and the accompanying materials
-// are made available under the terms of the Eclipse Public License v2.0
-// which accompanies this distribution, and is available at
-// http://www.eclipse.org/legal/epl-v20.html
-// SPDX-License-Identifier: EPL-2.0
+// Copyright (C) 2017-2020 German Aerospace Center (DLR) and others.
+// This program and the accompanying materials are made available under the
+// terms of the Eclipse Public License 2.0 which is available at
+// https://www.eclipse.org/legal/epl-2.0/
+// This Source Code may also be made available under the following Secondary
+// Licenses when the conditions for such availability set forth in the Eclipse
+// Public License 2.0 are satisfied: GNU General Public License, version 2
+// or later which is available at
+// https://www.gnu.org/licenses/old-licenses/gpl-2.0-standalone.html
+// SPDX-License-Identifier: EPL-2.0 OR GPL-2.0-or-later
 /****************************************************************************/
 /// @file    Storage.java
 /// @author  Axel Wegener
 /// @author  Enrico Gueli
 /// @author  Mario Krumnow
 /// @date    2016
-/// @version $Id$
 ///
 //
 /****************************************************************************/
@@ -125,7 +128,7 @@ public class Storage implements Serializable {
             throw new IllegalArgumentException("Error writing byte: byte value may only range from -128 to 127.");
         }
 
-        storageList.add(new Byte((byte)(value)));
+        storageList.add(Byte.valueOf((byte)(value)));
     }
 
     /**
@@ -157,9 +160,9 @@ public class Storage implements Serializable {
         // 255 -> -1
 
         if (value > 127) {
-            storageList.add(new Byte((byte)(value - 256)));
+            storageList.add(Byte.valueOf((byte)(value - 256)));
         } else {
-            storageList.add(new Byte((byte)(value)));
+            storageList.add(Byte.valueOf((byte)(value)));
         }
     }
 
